--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "css-loader": "^4.3.0",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^7.0.32",
     "postcss-loader": "^4.0.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
+    "terser-webpack-plugin": "^4.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
